--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -31,12 +31,12 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18 
+          node-version: 25 
 
       - name: Vite GitHub Pages Deployer
         uses: skywarth/vite-github-pages-deployer@v1.5.0
         with:
-          public_base_path: /XtofHeylands.github.io/  # Replace with your repository name
+          public_base_path: / 
           build_path: ./dist
           install_phase_node_env: dev
           build_phase_node_env: production
@@ -44,6 +44,3 @@ jobs:
           artifact_name: github-pages
           debug_mode: false
           working_path: ./
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
